Configuracion de Spring Boot con application.properties y perfiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=market
+
+# Perfil activo
+spring.profiles.active=dev
+
+# Context path para definir la ruta base de la app en la URL
+# http://localhost:8080/market/api/
+server.servlet.context-path=/market/api
