--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // runtimeOnly porque solo se usara en tiempo de ejecucion. No se especifica la version, ya que gradle lo hara automaticamente
+    runtimeOnly 'org.postgresql:postgresql'
+
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
