--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -1,1 +1,6 @@
 server.port=80
+
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5433/market
+spring.datasource.username=postgres
+spring.datasource.password=secret1234
