--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,5 @@ spring.application.name=market
 # Perfil activo
 spring.profiles.active=dev
 
-# Context path para definir la ruta base de la app en la URL
-# http://localhost:8080/market/api/
+# Context path para definir la ruta base de la app en la URL -> http://localhost:8080/market/api/
 server.servlet.context-path=/market/api
