Control de Respuestas HTTP con ResponseEntity y corrigiendo código

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,11 @@
-server.port=80
+server.port=8090
 
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5433/market
 spring.datasource.username=postgres
 spring.datasource.password=secret1234
+
+# Muestra en consola lo que esta pasando
+spring.jpa.show-sql=true
+# Da un formato mas legible a lo que se muestra en consola
+spring.jpa.properties.hibernate.format_sql=true
